--- a/lab2/flutter_apps/pubspec.yaml
+++ b/lab2/flutter_apps/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
     sdk: flutter
   http: ^0.13.6
   url_launcher: ^6.1.10
+  firebase_core: ^3.6.0
+  firebase_messaging: ^15.2.10
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
